# steam.py

./: .codacy.yml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .restyled.yml  LICENSE  README.md  build.py  mypy.ini  poetry_build.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: blacken.yml  build_doc_prs.yml  close_none_conforming_issues.yml  docs.yml  isort.yml  lint.yml  lint_python.yml  publish.yml  pyright.yml  pythonpublish.yml  test.yml  tests.yml
Examples/: basic chat bot.py  basic_chat_bot.py
docs/: .buildinfo  Makefile  api.rst  conf.py  faq.md  faq.rst  index.md  index.rst  quickstart.md  quickstart.rst  steam.rst
docs/_static/: codeblocks.css  copy.js  custom.js  documentation_options.js  icons.css  language_data.js  scorer.js  settings.js  sidebar.js  style.css
docs/_templates/: genindex.html  layout.html
docs/ext/commands/: api.rst  index.md  index.rst
docs/ext/csgo/: api.rst  index.md
docs/ext/dota2/: api.rst  index.md
docs/ext/tf2/: api.rst  index.md
docs/extensions/: __init__.py  annotations.py  attributetable.py  builder.py  details.py  enum.py  enums.py  events.py  exception_hierarchy.py  minimizer.py  query.py  resolve.py  resourcelinks.py  returns.py  source.py
docs/protobufs/: api.rst  index.rst
examples/: README.md  anonymous_login.py  badge_trader.py  basic_bot.py  chat.py  comment_monitor.py  discord_integration.py  discord_intergration.py  readme.md  reply.py  trade.py  wallet.py
examples/csgo/: casket.py
examples/tf2/: autocraft.py
requirements/: default.txt  dev.txt  docs.txt
scripts/: add_cms.py  blacken_docs_correctly.py  build_docs_for_pages.py  decode.py
steam/: __init__.py  __main__.py  _const.py  abc.py  achievement.py  app.py  badge.py  bundle.py  channel.py  chat.py  clan.py  client.py  client.pyi  comment.py  emoticon.py  enums.py  enums.pyi  errors.py  event.py  friend.py  game.py  game_server.py  gateway.py  group.py  guard.py  http.py  https.py  id.py  image.py  invite.py  iterators.py  leaderboard.py  manifest.py  market.py  media.py  message.py  models.py  package.py  post.py  profile.py  (+11 more)
steam/_gc/: __init__.py  client.py  state.py
steam/ext/: __init__.pyi
steam/ext/_gc/: __init__.py  client.py  state.py
steam/ext/commands/: __init__.py  bot.py  bot.pyi  cog.py  command.py  commands.py  context.py  converters.py  cooldown.py  errors.py  help.py  utils.py
steam/ext/csgo/: __init__.py  backpack.py  client.py  enums.py  models.py  state.py  utils.py
steam/ext/csgo/protobufs/: __init__.py  base.py  cstrike.py  econ.py  engine.py  ranks.py  sdk.py  struct_messages.py  system_messages.py
steam/ext/deadlock/: __init__.py  client.py  enums.py  models.py  state.py
steam/ext/deadlock/protobufs/: __init__.py  client_messages.py  common.py  sdk.py
steam/ext/dota2/: __init__.py  client.py  enums.py  models.py  state.py
steam/ext/dota2/models/: __init__.py  client_user.py  matches.py  users.py
steam/ext/dota2/protobufs/: __init__.py  base.py  client_messages.py  common.py  dota_gcmessages_client_watch.py  dota_gcmessages_common.py  dota_gcmessages_msgid.py  dota_shared_enums.py  gcsdk_gcmessages.py  gcsystemmsgs.py  lobby.py  sdk.py  shared_enums.py  steammessages.py  watch.py
steam/ext/dota2/protobufs/steammessages_steamlearn/: steamworkssdk.py
steam/ext/dota2/protobufs/steammessages_unified_base/: steamworkssdk.py
steam/ext/tf2/: __init__.py  backpack.py  client.py  currency.py  enums.py  state.py
steam/ext/tf2/protobufs/: __init__.py  base.py  econ.py  sdk.py  struct_messages.py  system_messages.py  tf.py
steam/ext/tf2/types/: schema.py
steam/protobufs/: __init__.py  app_info.py  auth.py  base.py  chat.py  clan.py  client_server.py  client_server_2.py  cloud.py  comments.py  community.py  content_manifest.py  content_manifest_pb2.py  content_server.py  econ.py  emsg.py  encrypted_app_ticket.py  encrypted_app_ticket_pb2.py  foobar.py  friend_messages.py  friends.py  game_servers.py  gc_pb2.py  headers.py  inventory.py  leaderboards.py  login.py  loyalty_rewards.py  msg.py  notifications.py  parental.py  player.py  protobufs.py  published_file.py  quest.py  reviews.py  steammessages_base.py  steammessages_base_pb2.py  steammessages_broadcast.py  steammessages_broadcast_pb2.py  (+64 more)
steam/types/: __init__.py  achievement.py  app.py  bundle.py  clan.py  game.py  guard.py  http.py  id.py  manifest.py  market.py  package.py  trade.py  user.py  vdf.py
steam/utils/: __init__.py  gaurd.py  guard.py  id.py  market.py  models.py  steamid.py
tests/: __init__.py  __main__.py  mocks.py  test_basic.py  test_bot.py  test_commands.py  test_meta.py  test_queries.py  test_shlex.py  test_steam_id.py  test_utils.py
tests/integration/: __init__.py  test_basic.py  test_steam_id.py  trade.py
tests/unit/: mocks.py  test_commands.py  test_enum.py  test_ext_csgo.py  test_ext_dota2.py  test_ext_tf2.py  test_guard.py  test_queries.py  test_steam_id.py  test_utils.py
