[metadata]
description-file = README.md

[mypy]
ignore_missing_imports = True
strict_optional = False
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
allow_redefinition = True
show_error_codes = True
warn_no_return = False
pretty = True
files = steam/*.py, steam/ext/commands/*.py, steam/protobufs/__init__.py, steam/protobufs/headers.py
